# ret-compiler

./: .eslintrc.js  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONDITIONAL_VALIDATION.md  CONDITIONAL_VALIDATION_ENHANCEMENT_PLAN.md  CONDITIONAL_VALIDATION_SUCCESS_REPORT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  FEATURES_SYNTAX.md  FEATURE_MATRIX.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPORT_EXPORT.md  IMPORT_EXPORT_DESIGN.md  LICENSE  MODULARIZATION_COMPLETE.md  MODULAR_REFACTOR_SIMPLE.md  README.md  REFACTORING_PLAN.md  SECURITY.md  STATUS_REPORT.md  UGSPT.ps1  ajv_integration_test.ts  comprehensive-test.ts  debug-array-parser.ts  debug-boolean-conditional.ts  debug-conditional-behavior.ts  debug-conditional-evaluation.ts  debug-conditional-parser.ts  debug-loose-mode.js  debug-multi-field.ts  debug-negative.ts  (+46 more)
.github/: FUNDING.yml
TODOS/: TS_COMPILER.todo.md
__tests__/: advanced_edge_cases_test.ts  all-format-types.rel  all-format-types.ts  all-types.rel  all-types.ts  complete-enhanced-system-test.ts  comprehensive_methods_test.ts  conditional-operators-test.ts  conditional-validation.test.ts  corrected-conditional-operators-test.ts  debug-optional.rel  debug_conditional.ts  debug_constraint_parsing_positive.ts  debug_email_validation.ts  debug_empty_path copy.ts  debug_empty_path.ts  debug_errors.ts  (+72 more)
ret-compiler/: Cargo.toml  README.md  example.rlt
ret-compiler/src/: generator.rs  lib.rs  main.rs  parser.rs
(+374 files in other folders)
