[package]
name = "rlt"
version = "0.1.0"
edition = "2021"
description = "ReliantType Compiler - Compiles .rlt files to TypeScript schemas"
authors = ["ReliantType Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
nom = "7.1"  # Parser combinator library
regex = "1.10"  # For regex pattern validation
walkdir = "2.4"  # For directory traversal
notify = "8.2.0"
